platform-mq/components/kafka-ui/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafka-ui
spec:
  to:
    kind: Service
    name: kafka-ui
  port:
    targetPort: http
